--- a/trunk/HovercraftUniverse/Content/Content.vcproj
+++ b/trunk/HovercraftUniverse/Content/Content.vcproj
@@ -167,6 +167,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Astroid.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CheckPoint.cpp"
 				>
 			</File>
@@ -197,6 +201,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\Astroid.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CheckPoint.h"
 				>
 			</File>
@@ -224,7 +232,11 @@
 			>
 		</Filter>
 		<File
-			RelativePath=".\game.userdatatypes.xml"
+			RelativePath="..\..\art\custom data\game.userdatatypes.xml"
+			>
+		</File>
+		<File
+			RelativePath="..\..\art\custom data\types.userdatatypes.xml"
 			>
 		</File>
 	</Files>
