--- a/HovercraftUniverse/Content/Content.vcproj
+++ b/HovercraftUniverse/Content/Content.vcproj
@@ -202,6 +202,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\UserDataCallback.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\UserDataFactory.cpp"
 				>
 			</File>
