Nickman * Updated GUI project. Still unusable.

--- a/HovercraftUniverse/GUI/GUI.vcproj
+++ b/HovercraftUniverse/GUI/GUI.vcproj
@@ -177,6 +177,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\BasicOverlay.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\GUIManager.cpp"
 				>
 			</File>
@@ -191,9 +195,21 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\BasicOverlay.h"
+				>
+			</File>
+			<File
 				RelativePath=".\GUIManager.h"
 				>
 			</File>
+			<Filter
+				Name="Exceptions"
+				>
+				<File
+					RelativePath=".\UninitialisedException.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Resource Files"
